--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,22 +13,9 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>amaslenn.github.com</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/amaslenn">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <p>it's empty</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+    <div id="main">
+      {{content}}
     </div>
     <script src="assets/javascripts/scale.fix.js"></script>
-    
   </body>
 </html>
