--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>amaslenn.github.com</h1>
+        <h1>amaslenn<small>.github.com</small></h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/amaslenn">View My GitHub Profile</a></p>
