--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>amaslenn.github.com by amaslenn</title>
+    <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/pygment_trac.css">
