--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,10 +20,9 @@
       </header>
 
       <section>
+        <h1>{{ page.title }}</h1>
         <p>{{ content }}</p>
-      </section>
 
-      <section>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             (function() {
