--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   padding:50px;
-  font:16px/1.3 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:16px/1.3 Lato, Candara, Helvetica, Ubuntu;
   color:#777;
   font-weight:300;
 }
@@ -58,8 +58,7 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
+  font-family:Consolas, Ubuntu Mono;
   font-size:12px;
 }
 
