added link to the main page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,9 +53,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>amaslenn<small>.github.com</small></h1>
-        <p></p>
-
+        <a href="{{ site.url }}"><h1>amaslenn<small>.github.com</small></h1></a>
         <p class="view"><a href="https://github.com/amaslenn">View My GitHub Profile</a></p>
       </header>
 
