--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset="UTF-8" />
     <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
