--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,7 @@
 
       <section>
         <h1>{{ page.title }}</h1>
+        Domain: {{ page.url | domain_name }}; {{page.url}} - {{ page.full_url }} -
         <p>{{ content }}</p>
 
         <div id="disqus_thread"></div>
