--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,9 @@
 
       <section>
         <h1>{{ page.title }}</h1>
+        {% if 1 %}
+          <p>{{domain}}</p>
+        {% endif %}
         <p>{{ content }}</p>
 
         <div id="disqus_thread"></div>
