--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,6 +22,9 @@
         <p class="view"><a href="https://github.com/amaslenn">View My GitHub Profile</a></p>
       </header>
       <section>
+        {% if 1 %}
+          <p>{{domain}} == {{page.url}}</p>
+        {% endif %}
       {{ content }}
       </section>
       <footer>
