--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
         <h1>{{ page.title }}</h1>
         <p>{{ content }}</p>
 
-        <div id="disqus_thread"></div>
+        <!--<div id="disqus_thread"></div>
         <script type="text/javascript">
             (function() {
                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -36,6 +36,7 @@
         </script>
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        -->
       </section>
 
       <footer>
