Small cosmetic/formatting changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@
       </section>
 
       <footer>
-        <p>Нашли ошибку? <a target="_blank" href="https://github.com/amaslenn/amaslenn.github.com/issues/new?title=Issue on {{page.url}}&assignee=amaslenn">Сюда!</a></p>
+        <p><a target="_blank" href="https://github.com/amaslenn/amaslenn.github.com/issues/new?title=Issue on {{page.url}}&assignee=amaslenn">Bug!</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
