--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>amaslenn.github.com by amaslenn</title>
+    <title>amaslenn.github.io by amaslenn</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/pygment_trac.css">
+    <link rel="alternate" type="application/rss+xml" title="amaslenn.github.io RSS" href="/feed/index.xml">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
     <div id="main">
